# agentforge

./: .gitignore  AI_COST_ANALYSIS.md  APPLICATION_FLOWS.md  ARCHITECTURE.md  ATO_EVIDENCE.md  DEMO_SCRIPT.md  IMPLEMENTATION_PLAN.md  OBSERVABILITY.md  PERF_PROFILE.md  README.md  TARGET.md  THREAT_MODEL.md  TRIAGE_EXERCISE.md  USERS.md  conftest.py  pyproject.toml  render.yaml
agentforge/: documentation.py  eval_case.py  eval_runner.py  generate_reports.py  judge.py  judge_eval.py  observability.py  orchestrator.py  perf.py  red_team.py  red_team_client.py  regression.py  rubrics.py  target_adapter.py  webapp.py
contracts/: VERSIONING.md  attack_attempt.schema.json  attack_directive.schema.json  campaign_result.schema.json  errors.schema.json  eval_case.schema.json  eval_result.schema.json  verdict.schema.json  vuln_report.schema.json
docs/: BUILD_VS_CONFIGURE.md  EVIDENCE_PACKET.md
evals/: __init__.py  dashboard.py  run.py
judge/: ground_truth.yaml
reports/: AF-2026-0001.json  AF-2026-0001.md  AF-2026-0002.json  AF-2026-0002.md  AF-2026-0003.json  AF-2026-0003.md  AF-2026-0004.json  AF-2026-0004.md  README.md
rubrics/: _base.md  data_exfiltration.md  dos.md  identity_role.md  prompt_injection.md  state_corruption.md  tool_misuse.md
tests/: test_contracts.py  test_dashboard.py  test_documentation.py  test_eval_case.py  test_eval_runner.py  test_judge.py  test_observability.py  test_orchestrator.py  test_perf.py  test_red_team.py  test_red_team_client.py  test_regression.py  test_target_adapter.py  test_webapp.py
(+18 files in other folders)
